Alpha-beta implementation

--- a/src/main/resources/FXML/mainGame.fxml
+++ b/src/main/resources/FXML/mainGame.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="VBox" alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.connect4.connect4javafx.Connect4MainGame">
+<VBox fx:id="VBox" alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.connect4.connect4javafx.GameController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
@@ -28,7 +28,7 @@
          <Font name="Calibri" size="14.0" />
       </font>
    </Text>
-    <GridPane fx:id="MainGameGridPane" alignment="CENTER" gridLinesVisible="true">
+    <GridPane fx:id="mainGameGridPane" alignment="CENTER" gridLinesVisible="true">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="100.0" />
